[gd_scene load_steps=6 format=2]

[ext_resource path="res://Gameboard/boardpiece_selected.png" type="Texture" id=1]
[ext_resource path="res://Gameboard/boardpiece_blank.png" type="Texture" id=2]
[ext_resource path="res://Gameboard/boardtile.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Selected:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "blinking"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Selected:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="boardtile" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Selected" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="blank" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/blinking = SubResource( 2 )

[node name="Choice" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="Choice" to="." method="_on_Choice_mouse_entered"]
[connection signal="mouse_exited" from="Choice" to="." method="_on_Choice_mouse_exited"]
[connection signal="pressed" from="Choice" to="." method="_on_Choice_pressed"]
